--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,8 +7,10 @@ ktor {
         modules = [ com.example.ApplicationKt.module ]
     }
 }
+
 jwt {
-    domain = "https://jwt-provider-domain/"
-    audience = "jwt-audience"
-    realm = "ktor sample app"
+    domain = "https://0.0.0.0:8080"
+    audience = "main"
+    secret = ""
+    realm = "social network"
 }
